--- a/Contact.css
+++ b/Contact.css
@@ -1,220 +1,74 @@
  .u-section-1 {
-  background-image: none;
+  background-image: linear-gradient(white, #478ac9);
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 281px;
-}
-
-.u-section-1 .u-text-1 {
-  margin: 90px auto 0;
-}
-
-.u-section-1 .u-text-2 {
-  width: 781px;
-  margin: 20px auto 38px;
-}
-
-@media (max-width: 1199px) {
-   .u-section-1 {
-    min-height: 316px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 3.75rem;
-    font-style: normal;
-  }
-
-  .u-section-1 .u-text-2 {
-    letter-spacing: normal;
-    line-height: 1.4;
-  }
-}
-
-@media (max-width: 991px) {
-   .u-section-1 {
-    min-height: 244px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 720px;
-  }
-}
-
-@media (max-width: 767px) {
-   .u-section-1 {
-    min-height: 316px;
-  }
-
-  .u-section-1 .u-sheet-1 {
-    min-height: 507px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 540px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 535px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 2.25rem;
-    margin-top: 60px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: 340px;
-  }
-} .u-section-2 {
-  background-image: none;
-}
-
-.u-section-2 .u-sheet-1 {
   min-height: 1028px;
 }
 
-.u-section-2 .u-layout-wrap-1 {
+.u-section-1 .u-layout-wrap-1 {
   margin-top: 31px;
   margin-bottom: 31px;
+  min-height: 967px;
 }
 
-.u-section-2 .u-layout-cell-1 {
-  min-height: 191px;
+.u-section-1 .u-layout-cell-1 {
+  min-height: 216px;
   background-image: none;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-1 .u-container-layout-1 {
   padding: 1px 30px 30px;
 }
 
-.u-section-2 .u-list-1 {
-  margin-top: 0;
-  margin-bottom: 0;
+.u-section-1 .u-text-1 {
+  font-size: 3.75rem;
+  font-style: normal;
+  margin: 51px 340px 0 auto;
 }
 
-.u-section-2 .u-repeater-1 {
-  grid-template-columns: repeat(4, calc(25% - 18px));
-  min-height: 113px;
-  grid-gap: 24px;
+.u-section-1 .u-text-2 {
+  letter-spacing: normal;
+  line-height: 1.4;
+  width: 781px;
+  margin: 31px auto 0;
 }
 
-.u-section-2 .u-container-layout-2 {
-  padding: 10px 30px 8px;
-}
-
-.u-section-2 .u-text-1 {
-  font-size: 1.25rem;
-  letter-spacing: 0px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.u-section-2 .u-text-2 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 10px 30px 8px;
-}
-
-.u-section-2 .u-text-3 {
-  font-size: 1.25rem;
-  letter-spacing: 0px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.u-section-2 .u-text-4 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-container-layout-4 {
-  padding: 10px 30px 8px;
-}
-
-.u-section-2 .u-text-5 {
-  font-size: 1.25rem;
-  letter-spacing: 0px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.u-section-2 .u-text-6 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-container-layout-5 {
-  padding: 10px 30px 8px;
-}
-
-.u-section-2 .u-text-7 {
-  font-size: 1.25rem;
-  letter-spacing: 0px;
-  font-weight: 700;
-  margin: 0;
-}
-
-.u-section-2 .u-text-8 {
-  margin: 20px 0 0;
-}
-
-.u-section-2 .u-text-9 {
-  font-size: 1rem;
-  letter-spacing: 0px;
-  font-style: italic;
-  text-align: left;
-  margin: 33px auto 0;
-}
-
-.u-section-2 .u-btn-1 {
-  border-style: solid;
-  font-style: italic;
-  padding: 0;
-}
-
-.u-section-2 .u-layout-cell-2 {
+.u-section-1 .u-layout-cell-2 {
   min-height: 673px;
 }
 
-.u-section-2 .u-container-layout-6 {
+.u-section-1 .u-container-layout-2 {
   padding: 30px 40px;
 }
 
-.u-section-2 .u-text-10 {
-  font-size: 3rem;
-  margin: 0 auto;
-}
-
-.u-section-2 .u-text-11 {
+.u-section-1 .u-text-3 {
   font-size: 1.25rem;
   font-weight: 400;
-  margin: 20px 0 0;
+  margin: 0;
 }
 
-.u-section-2 .u-form-1 {
+.u-section-1 .u-form-1 {
   height: 465px;
   margin-top: 33px;
   margin-bottom: 0;
 }
 
-.u-section-2 .u-input-1 {
+.u-section-1 .u-input-1 {
   height: 55px;
   background-image: none;
 }
 
-.u-section-2 .u-input-2 {
+.u-section-1 .u-input-2 {
   height: 55px;
   background-image: none;
 }
 
-.u-section-2 .u-input-3 {
+.u-section-1 .u-input-3 {
   background-image: none;
 }
 
-.u-section-2 .u-btn-2 {
+.u-section-1 .u-btn-1 {
   border-style: none;
   font-weight: 700;
   text-transform: uppercase;
@@ -224,177 +78,140 @@
   padding: 14px 0 15px;
 }
 
-.u-section-2 .u-layout-cell-3 {
+.u-section-1 .u-layout-cell-3 {
   min-height: 673px;
 }
 
-.u-section-2 .u-container-layout-7 {
+.u-section-1 .u-container-layout-3 {
   padding: 30px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1487px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 910px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 157px;
+  .u-section-1 .u-layout-wrap-1 {
+    min-height: 693px;
   }
 
-  .u-section-2 .u-list-1 {
-    margin-top: 375px;
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 178px;
   }
 
-  .u-section-2 .u-repeater-1 {
-    grid-template-columns: repeat(4, calc(25% - 15px));
-    min-height: 91px;
-    grid-gap: 20px;
+  .u-section-1 .u-text-1 {
+    margin-top: 556px;
+    margin-right: 277px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-container-layout-5 {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-1 .u-layout-cell-2 {
     min-height: 555px;
   }
 
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-3 {
     min-height: 555px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1474px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 780px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
-    min-height: 647px;
+  .u-section-1 .u-layout-wrap-1 {
+    min-height: 30px;
   }
 
-  .u-section-2 .u-list-1 {
-    margin-top: 290px;
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 100px;
   }
 
-  .u-section-2 .u-repeater-1 {
-    min-height: 222px;
-    grid-template-columns: repeat(2, calc(50% - 10px));
+  .u-section-1 .u-text-1 {
+    margin-top: 579px;
+    margin-right: 208px;
   }
 
-  .u-section-2 .u-text-9 {
-    margin-top: 30px;
+  .u-section-1 .u-text-2 {
+    width: 660px;
   }
 
-  .u-section-2 .u-layout-cell-2 {
+  .u-section-1 .u-layout-cell-2 {
     min-height: 651px;
   }
 
-  .u-section-2 .u-container-layout-6 {
+  .u-section-1 .u-container-layout-2 {
     padding-left: 30px;
     padding-right: 30px;
   }
 
-  .u-section-2 .u-text-10 {
-    font-size: 2.25rem;
-  }
-
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-3 {
     min-height: 651px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1810px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1093px;
   }
 
-  .u-section-2 .u-layout-cell-1 {
+  .u-section-1 .u-layout-wrap-1 {
+    min-height: 243px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 3rem;
+    margin-top: 511px;
+    margin-right: 164px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: 520px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
     min-height: 100px;
   }
 
-  .u-section-2 .u-list-1 {
-    margin-top: 235px;
-  }
-
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-5 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-3 {
     min-height: 772px;
   }
 
-  .u-section-2 .u-container-layout-7 {
+  .u-section-1 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
-    min-height: 1548px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 857px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-1 .u-layout-wrap-1 {
+    min-height: 7px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  .u-section-2 .u-list-1 {
-    margin-top: 168px;
+  .u-section-1 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: 608px;
+    margin-right: 101px;
   }
 
-  .u-section-2 .u-repeater-1 {
-    grid-template-columns: 100%;
+  .u-section-1 .u-text-2 {
+    width: 320px;
   }
 
-  .u-section-2 .u-container-layout-6 {
+  .u-section-1 .u-container-layout-2 {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  .u-section-2 .u-text-10 {
-    font-size: 1.875rem;
-  }
-
-  .u-section-2 .u-layout-cell-3 {
+  .u-section-1 .u-layout-cell-3 {
     min-height: 403px;
   }
 }
