--- a/home.css
+++ b/home.css
@@ -579,7 +579,20 @@
   }
 
   .u-section-3 .u-layout-cell-1 {
-    min-height: 421px;
+    min-height: 127px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 301px;
+    height: 109px;
+  }
+
+  .u-section-3 .u-layout-cell-2 {
+    min-height: 139px;
+  }
+
+  .u-section-3 .u-image-3 {
+    margin-left: auto;
   }
 } .u-section-4 {
   background-image: linear-gradient(white, #478ac9);
@@ -654,8 +667,6 @@
 .u-section-4 .u-icon-1 {
   height: 65px;
   width: 65px;
-  background-image: none;
-  color: rgb(0, 0, 0) !important;
   margin: 11px auto 0 0;
   padding: 15px;
 }
@@ -688,8 +699,6 @@
 .u-section-4 .u-icon-2 {
   height: 65px;
   width: 65px;
-  background-image: none;
-  color: rgb(0, 0, 0) !important;
   margin: 11px auto 0 0;
   padding: 15px;
 }
@@ -723,8 +732,6 @@
 .u-section-4 .u-icon-3 {
   height: 65px;
   width: 65px;
-  background-image: none;
-  color: rgb(0, 0, 0) !important;
   margin: 11px auto 0 0;
   padding: 15px;
 }
@@ -758,8 +765,6 @@
 .u-section-4 .u-icon-4 {
   height: 65px;
   width: 65px;
-  background-image: none;
-  color: rgb(0, 0, 0) !important;
   margin: 11px auto 0 0;
   padding: 15px;
 }
@@ -931,29 +936,52 @@
     width: 340px;
   }
 
-  .u-section-4 .u-group-1 {
-    width: 340px;
+  .u-section-4 .u-icon-1 {
+    padding: 13px;
   }
 
-  .u-section-4 .u-text-3 {
-    margin-right: 0;
-    margin-left: 45px;
+  .u-section-4 .u-group-1 {
+    width: 310px;
   }
 
   .u-section-4 .u-text-4 {
-    margin-left: 45px;
+    width: auto;
+  }
+
+  .u-section-4 .u-icon-2 {
+    padding: 13px;
   }
 
   .u-section-4 .u-group-2 {
-    width: 340px;
+    width: 310px;
+  }
+
+  .u-section-4 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-4 .u-icon-3 {
+    padding: 13px;
   }
 
   .u-section-4 .u-group-3 {
-    width: 340px;
+    width: 310px;
+  }
+
+  .u-section-4 .u-text-8 {
+    width: auto;
+  }
+
+  .u-section-4 .u-icon-4 {
+    padding: 13px;
   }
 
   .u-section-4 .u-group-4 {
-    width: 340px;
+    width: 310px;
+  }
+
+  .u-section-4 .u-text-10 {
+    width: auto;
   }
 } .u-section-5 {
   background-image: none;
@@ -1536,6 +1564,97 @@
   .u-section-6 .u-sheet-1 {
     min-height: 1258px;
   }
+
+  .u-section-6 .u-text-1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-6 .u-container-layout-2 {
+    padding-left: 24px;
+  }
+
+  .u-section-6 .u-icon-1 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-btn-1 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-container-layout-3 {
+    padding-left: 24px;
+  }
+
+  .u-section-6 .u-icon-3 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-btn-2 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-layout-cell-4 {
+    min-height: 412px;
+  }
+
+  .u-section-6 .u-container-layout-4 {
+    padding-left: 24px;
+  }
+
+  .u-section-6 .u-icon-5 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-btn-3 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-layout-cell-5 {
+    min-height: 411px;
+  }
+
+  .u-section-6 .u-container-layout-5 {
+    padding-top: 27px;
+    padding-bottom: 27px;
+    padding-left: 24px;
+  }
+
+  .u-section-6 .u-icon-7 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-text-9 {
+    margin-top: 33px;
+  }
+
+  .u-section-6 .u-btn-4 {
+    margin-top: 33px;
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-layout-cell-6 {
+    min-height: 411px;
+  }
+
+  .u-section-6 .u-container-layout-6 {
+    padding-top: 28px;
+    padding-bottom: 28px;
+    padding-left: 24px;
+  }
+
+  .u-section-6 .u-icon-9 {
+    margin-left: auto;
+  }
+
+  .u-section-6 .u-text-11 {
+    margin-top: 32px;
+  }
+
+  .u-section-6 .u-btn-5 {
+    margin-top: 24px;
+    margin-left: auto;
+  }
 } .u-section-7 {
   background-image: none;
 }
@@ -1966,16 +2085,46 @@
     width: 340px;
   }
 
+  .u-section-8 .u-icon-1 {
+    margin-right: auto;
+    margin-left: 104px;
+  }
+
   .u-section-8 .u-text-4 {
     font-size: 2.25rem;
+  }
+
+  .u-section-8 .u-btn-1 {
+    margin-right: 0;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-icon-2 {
+    margin-right: auto;
+    margin-left: 104px;
   }
 
   .u-section-8 .u-text-7 {
     font-size: 2.25rem;
   }
 
+  .u-section-8 .u-btn-2 {
+    margin-right: 0;
+    margin-left: auto;
+  }
+
+  .u-section-8 .u-icon-3 {
+    margin-right: auto;
+    margin-left: 104px;
+  }
+
   .u-section-8 .u-text-10 {
     font-size: 2.25rem;
+  }
+
+  .u-section-8 .u-btn-3 {
+    margin-right: 0;
+    margin-left: auto;
   }
 } .u-section-9 {
   background-image: none;
